Use StandardCharsets instead of Encoding